fix: Configurar CORS para producción en SecurityConfig y render.yaml
- Actualizar SecurityConfig para usar variable de entorno CORS_ALLOWED_ORIGINS

- Actualizar render.yaml con URL de producción (unpicadito.vercel.app)

- Resuelve errores CORS: No 'Access-Control-Allow-Origin' header